--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,10 +51,20 @@
         android:paddingTop="50dp"
         android:clickable="true">
 
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="摄像头列表"
+            android:textSize="18sp"
+            android:textColor="#000000"/>
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_points"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:layout_below="@id/tv_title"/>
 
     </RelativeLayout>
 
