--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -6,10 +6,9 @@
 
     <ImageView
         android:id="@+id/iv_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="90dp"
+        android:layout_height="140dp"
         android:layout_centerInParent="true"
-        android:background="@mipmap/ic_launcher"
         />
 
 </RelativeLayout>
