--- a/app/src/main/res/layout/layout_info_item.xml
+++ b/app/src/main/res/layout/layout_info_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="200dp"
     android:layout_height="match_parent"
     android:showDividers="middle"
     android:padding="10dp"
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/info_address"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:text=""/>
 
